@@ -7,14 +7,18 @@ extern "C" {
 
 #include <stdint.h>
 
-// uint64_t: "18446744073709551615"
-// int64_t:  "9223372036854775807"
-// int64_t:  "-9223372036854775808"
+// "18446744073709551615"
+#define KERNAUX_UTOA10_BUFFER_SIZE 21
+
+// "9223372036854775807"
+// "-9223372036854775808"
 #define KERNAUX_ITOA10_BUFFER_SIZE 21
 
-// uint64_t: "ffffffffffffffff"
-// int64_t:  "7fffffffffffffff"
-// int64_t:  "-8000000000000000"
+// "ffffffffffffffff"
+#define KERNAUX_UTOA16_BUFFER_SIZE 17
+
+// "7fffffffffffffff"
+// "-8000000000000000"
 #define KERNAUX_ITOA16_BUFFER_SIZE 18
 
 void kernaux_utoa10(uint64_t value, char *buffer);
