@@ -5,6 +5,8 @@
 	* include/kernaux/ntoa.h: Rename const "KERNAUX_ITOA_BUFFER_SIZE" to
 	"KERNAUX_ITOA10_BUFFER_SIZE"
 	* include/kernaux/ntoa.h: Add funcs "kernaux_utoa16" and "kernaux_itoa16"
+	* include/kernaux/ntoa.h: Add consts "KERNAUX_UTOA10_BUFFER_SIZE" and
+	"KERNAUX_UTOA16_BUFFER_SIZE"
 
 2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>
 
